--- a/stylesheets/tree-view.less
+++ b/stylesheets/tree-view.less
@@ -2,31 +2,31 @@
 
 .tree-view {
   font-size: @font-size;
-  background: @tree-view-background-color;
+  // background: @tree-view-background-color;
 
   .selected:before {
-  	background: #444;
+  	// background: @base03;
     box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
   }
 }
 
 .focusable-panel {
   opacity: 1;
-  background: #303030;
+  background: @base03;
   box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
 
   &:focus {
-    background: #282828;
+    background: @base03;
 
     .selected:before {
-      background: @background-color-selected;
+      background: @base01;
     }
 
     .selected > .name,
     .selected > .name:before,
     .selected > .list-item > .name,
     .selected > .list-item > .name:before {
-      color: #fff !important;
+      color: @base2 !important;
     }
   }
 }
