--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -5,7 +5,7 @@
 @tab-top-padding: 5px;
 @tab-bottom-border-height: 8px;
 @tab-border: 1px solid @tab-border-color;
-@tab-bar-bottom-border-color: #111;
+@tab-bar-bottom-border-color: darken(@base03, 1%);
 
 .tab-bar {
   height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
