Bit more standard

--- a/stylesheets/git.less
+++ b/stylesheets/git.less
@@ -5,11 +5,11 @@
 .status-added { .text(success); }
 .status-ignored { .text(subtle); }
 .status-modified {
-  color: @blue;
+  color: @text-color-modified;
   text-shadow: none;
 }
 .status-removed { .text(error); }
 .status-renamed {
-  color: @yellow;
+  color: @text-color-renamed;
   text-shadow: none;
 }
