--- a/stylesheets/tooltips.less
+++ b/stylesheets/tooltips.less
@@ -1,14 +1,15 @@
 @import "ui-variables";
 
 .tooltip {
-  @tip-background-color: #fff;
-  @tip-text-color: #333;
+  @tip-background-color: @base3;
+  @tip-text-color: @base00;
   white-space: nowrap;
 
   .keystroke {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 13px;
-    color: #777;
+    font-weight: bold;
+    color: @base01;
     padding-left: 2px;
   }
 
