--- a/stylesheets/ui-variables.less
+++ b/stylesheets/ui-variables.less
@@ -54,8 +54,8 @@
 @pane-item-background-color: @base03;
 @pane-item-border-color: @base02;
 
-@input-background-color: @base03;
-@input-border-color: @base02;
+@input-background-color: @base02;
+@input-border-color: @base01;
 
 @tool-panel-background-color: @base03;
 @tool-panel-border-color: @base02;
@@ -70,9 +70,9 @@
 @overlay-border-color: @base02;
 
 @button-background-color: @base03;
-@button-background-color-hover: @base02;
+@button-background-color-hover: lighten(@base02, 2%);
 @button-background-color-selected: @base02;
-@button-border-color: @base02;
+@button-border-color: @base01;
 
 @tab-bar-background-color: @base03;
 @tab-bar-border-color: @base03;
