--- a/stylesheets/buttons.less
+++ b/stylesheets/buttons.less
@@ -3,19 +3,22 @@
 
 .btn-background (@color, @hover-color, @selected-color, @text-color) {
   color: @text-color;
-  background-color: transparent;
-  background-image: -webkit-linear-gradient(@color, darken(@color, 5%));
+  background-color: @color;
+  border: 1px solid @button-border-color;
+  // background-image: -webkit-linear-gradient(@color, darken(@color, 5%));
 
   &:hover {
     color: @text-color-highlight;
-    background-image: -webkit-linear-gradient(@hover-color, darken(@hover-color, 5%));
+    background-color: @hover-color;
+    // background-image: -webkit-linear-gradient(@hover-color, darken(@hover-color, 5%));
   }
   &.selected,
   &.selected:hover {
     color: @text-color-highlight;
-    background-image: -webkit-linear-gradient(darken(@selected-color, 15%), @selected-color);
+    background-color: @selected-color;
+    // background-image: -webkit-linear-gradient(darken(@selected-color, 15%), @selected-color);
     &:hover {
-      background-image: -webkit-linear-gradient(@selected-color, darken(@selected-color, 5%));
+      // background-image: -webkit-linear-gradient(@selected-color, darken(@selected-color, 5%));
     }
   }
 }
@@ -32,7 +35,7 @@
 }
 
 .btn.btn-primary {
-  .btn-variant(@background-color-info);
+  .btn-variant(@blue);
 }
 .btn.btn-info {
   .btn-variant(@background-color-info);
@@ -45,6 +48,15 @@
 }
 .btn.btn-error {
   .btn-variant(@background-color-error);
+}
+
+.btn-group {
+  .btn:first-child, {
+    border-left: 1px solid @button-border-color;
+  }
+  .btn:last-child, {
+    border-right: 1px solid @button-border-color;
+  }
 }
 
 .caret {
