--- a/stylesheets/editor.less
+++ b/stylesheets/editor.less
@@ -5,8 +5,7 @@
   color: @text-color-highlight;
   background-color: @input-background-color;
   border: 1px solid @input-border-color;
-  box-shadow:
-    inset 0 1px 1px rgba(0, 0, 0, .075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
   border-radius: @component-border-radius;
   padding-left: @component-padding/2;
 
@@ -15,8 +14,8 @@
 }
 
 .editor.editor-colors.mini.is-focused {
-  background-color: lighten(@input-background-color, 5%);
-  .selection .region { background-color: desaturate(@background-color-info, 50%); }
+  background-color: lighten(@input-background-color, 4%);
+  .selection .region { background-color: lighten(@input-background-color, 18%); }
 }
 
 // FIXME: these should go in syntax themes?
