--- a/stylesheets/tree-view.less
+++ b/stylesheets/tree-view.less
@@ -5,21 +5,21 @@
   // background: @tree-view-background-color;
 
   .selected:before {
-  	// background: @base03;
-    box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
+  	background: @base02;
+    box-shadow: inset -2px 0 3px rgba(0,0,0, .1);
   }
 }
 
 .focusable-panel {
   opacity: 1;
   background: @base03;
-  box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
+  box-shadow: inset -3px 0 3px rgba(0,0,0, .1);
 
   &:focus {
     background: @base03;
 
     .selected:before {
-      background: @base01;
+      background: lighten(@base02, 2%);
     }
 
     .selected > .name,
