Just use all the space

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -1,8 +1,8 @@
 @import "ui-variables";
-@tab-radius: 3px;
+@tab-radius: 0px;
 @modified-icon-width: 8px;
 @tab-skew: 30deg;
-@tab-top-padding: 4px;
+@tab-top-padding: 0px;
 @tab-bottom-border-height: 8px;
 @tab-border: 1px solid @tab-border-color;
 @tab-bar-bottom-border-color: darken(@base03, 1%);
@@ -71,6 +71,7 @@
     }
 
     &:first-child {
+      margin-left: 0px;
     }
   }
 
