Options were setting their own colors

--- a/stylesheets/atom.less
+++ b/stylesheets/atom.less
@@ -7,3 +7,11 @@
 .workspace {
   background-color: @app-background-color;
 }
+
+.project-find .options-label {
+  color: @text-color;
+
+  .options {
+   color: @text-color-subtle;
+  }
+}
