--- a/stylesheets/panels.less
+++ b/stylesheets/panels.less
@@ -23,6 +23,10 @@
   &.panel-left {
     border-right: 2px solid @tool-panel-border-color;
   }
+
+  a {
+    color: @text-color-subtle;
+  }
 }
 
 .inset-panel {
