--- a/stylesheets/atom.less
+++ b/stylesheets/atom.less
@@ -15,3 +15,19 @@
    color: @text-color-subtle;
   }
 }
+
+// props: https://github.com/soloman1124/atom-solo-dark-ui
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+
+::-webkit-scrollbar-corner {
+	background: @base03;
+}
+
+::-webkit-scrollbar-thumb {
+	background: @base02;
+	border-radius: 5px;
+	box-shadow: 0 0 1px black inset;
+}
