WIP - Moving to 1.0 API

--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -1,16 +1,12 @@
 @import "ui-variables";
 
-.overlay {
+atom-panel.modal {
   color: @text-color;
   background-color: @overlay-background-color;
   padding: @component-padding;
   border: 1px solid @overlay-border-color;
   box-shadow: 0 0 10px @base-border-color;
   border-radius: @component-border-radius;
-
-  .editor.mini {
-    margin-bottom: @component-padding;
-  }
 
   .select-list ol.list-group,
   &.select-list ol.list-group {
