--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -11,6 +11,18 @@
   .status-added {
     color: @text-color-success !important;
   }
+  .status-ignored {
+    color: @text-color-highlight !important;
+  }
+  .status-modified {
+    color: @text-color-modified !important;
+  }
+  .status-removed {
+    color: @text-color-error !important;
+  }
+  .status-renamed {
+    color: @text-color-renamed !important;
+  }
 }
 
 .focusable-panel {
@@ -22,11 +34,23 @@
     background: @base03;
 
     .selected:before {
-      background: lighten(@base02, 2%);
+      background: lighten(@base02, 2%) !important;
     }
 
+    .selected {
+      color: lighten(@text-color, 20%) !important;
+    }
     .selected.status-added {
-      color: lighten(@text-color-success, 20%) !important;
+      color: lighten(@text-color-success, 5%) !important;
+    }
+    .selected.status-modified {
+      color: lighten(@text-color-modified, 5%) !important;
+    }
+    .status-removed {
+      color: lighten(@text-color-error, 5%) !important;
+    }
+    .status-renamed {
+      color: lighten(@text-color-renamed, 5%) !important;
     }
   }
 }
