--- a/index.less
+++ b/index.less
@@ -7,6 +7,7 @@
 @import "styles/nav";
 @import "styles/overlays";
 @import "styles/panels";
+@import "styles/panes";
 @import "styles/progress";
 @import "styles/sites";
 @import "styles/tabs";
