--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -76,8 +76,9 @@
 
 @tab-bar-background-color: @base03;
 @tab-bar-border-color: @base03;
+@tab-text-color: @base2;
 @tab-background-color: @base03;
-@tab-background-color-active: @base02;
+@tab-background-color-active: lighten(@base02, 3%);
 @tab-border-color: @base03;
 
 @tree-view-background-color: @tool-panel-background-color;
