Use base color scheme

--- a/styles/progress.less
+++ b/styles/progress.less
@@ -41,7 +41,7 @@ progress {
   height: @progress-height;
   -webkit-appearance: none;
   border-radius: @component-border-radius;
-  background-color: #666;
+  background-color: #base02;
   background-image:
      -webkit-linear-gradient(-30deg,
                              transparent 33%, rgba(0, 0, 0, .1) 33%,
