Align the Progess bar

--- a/styles/progress.less
+++ b/styles/progress.less
@@ -34,7 +34,6 @@
 // Much learning from:
 // http://css-tricks.com/html5-progress-element/
 
-@progress-height: 16px;
 @progress-shine-gradient: -webkit-linear-gradient(top, rgba(255, 255, 255, .15), rgba(0, 0, 0, .15));
 
 progress {
@@ -49,6 +48,7 @@ progress {
                              @progress-shine-gradient;
   border-radius: 2px;
   background-size: 25px @progress-height, 100% 100%, 100% 100%;
+  vertical-align: middle;
   -webkit-animation: animate-stripes 5s linear 6; // stop animation after 6 runs (30s) to limit CPU usage
 }
 
