--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -101,7 +101,7 @@
 @component-icon-padding: 5px;
 @component-icon-size: 16px;
 @component-line-height: 25px;
-@component-border-radius: 2px;
+@component-border-radius: 0;
 
 @tab-height: 30px;
 
