--- a/styles/editor.less
+++ b/styles/editor.less
@@ -15,7 +15,7 @@ atom-text-editor[mini] {
   height:24px;
 
   &,
-  &::shadow {
+  &.editor {
     .placeholder-text {
       color: @text-color-subtle;
     }
@@ -28,7 +28,7 @@ atom-text-editor[mini] {
   }
 
   &.is-focused,
-  &.is-focused::shadow {
+  &.is-focused.editor {
     background-color: lighten(@input-background-color, 4%);
     opacity:1;
     outline:none;
